docs/0.16/_sources/api/gammapy.modeling.Parameters.rst.txt
Parameters
==========

.. currentmodule:: gammapy.modeling

.. autoclass:: Parameters
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameters.correlation
      ~Parameters.covariance
      ~Parameters.free_parameters
      ~Parameters.names
      ~Parameters.restore_values
      ~Parameters.scipy_mvn
      ~Parameters.unique_parameters
      ~Parameters.values

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameters.autoscale
      ~Parameters.copy
      ~Parameters.count
      ~Parameters.error
      ~Parameters.freeze_all
      ~Parameters.from_dict
      ~Parameters.from_stack
      ~Parameters.from_values
      ~Parameters.get_subcovariance
      ~Parameters.index
      ~Parameters.link
      ~Parameters.set_covariance_factors
      ~Parameters.set_error
      ~Parameters.set_parameter_factors
      ~Parameters.set_subcovariance
      ~Parameters.to_dict
      ~Parameters.to_table
      ~Parameters.update_from_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: correlation
   .. autoattribute:: covariance
   .. autoattribute:: free_parameters
   .. autoattribute:: names
   .. autoattribute:: restore_values
   .. autoattribute:: scipy_mvn
   .. autoattribute:: unique_parameters
   .. autoattribute:: values

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: error
   .. automethod:: freeze_all
   .. automethod:: from_dict
   .. automethod:: from_stack
   .. automethod:: from_values
   .. automethod:: get_subcovariance
   .. automethod:: index
   .. automethod:: link
   .. automethod:: set_covariance_factors
   .. automethod:: set_error
   .. automethod:: set_parameter_factors
   .. automethod:: set_subcovariance
   .. automethod:: to_dict
   .. automethod:: to_table
   .. automethod:: update_from_dict
